Fix Header arrow & Left Infobox overlap issues

--- a/SCSS/Theme Rewrite/base/_headers.scss
+++ b/SCSS/Theme Rewrite/base/_headers.scss
@@ -285,3 +285,6 @@ h#{$num}, .is-live-preview .HyperMD-header-#{$num} {
     }
 }
 
+.markdown-preview-view .heading-collapse-indicator {
+    z-index: 2;
+}
